--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -16,7 +16,7 @@ body {
 .about__bubble {
   height: 60px;
   width: 60px;
-  border: 2px solid #2666CE;
+  border: 2px solid rgba(38, 102, 206, 0.7);
   border-radius: 50px;
   position: absolute;
   top: 10%;
@@ -27,7 +27,7 @@ body {
   height: 10px;
   width: 10px;
   border-radius: 50px;
-  background: #4384EC;
+  background:  rgba(67, 132, 236, 0.5);
   position: absolute;
   top: 20%;
   right: 20%;
