--- a/assets/css/galary.css
+++ b/assets/css/galary.css
@@ -6,6 +6,16 @@ main {
 	padding-top: 0px;
 }
 
+.header {
+    position: relative;
+}
+
+.galary__main,
+.galary__examples,
+.galary__section {
+	margin-bottom: var(--m108);
+}
+
 .galary__main {
 	height: 700px;
 	padding-top: 36px;
@@ -69,7 +79,7 @@ main {
 }
 
 .input--active {
-	background-color: var(--medium-grey-color);
+	background-color: var(--light-green-color);
 }
 
 .slider-prev {
@@ -80,7 +90,7 @@ main {
 	height: 50px;
 	padding: 0;
 	border-radius: 10%;
-	background-color: var(--medium-grey-color);
+	background-color: var(--green-color);
 	opacity: .9;
 	transition: all .4s ease;
 }
@@ -95,7 +105,7 @@ main {
 .slider-prev:hover {
 	opacity: 1;
 	transform: scale(1.1);
-	background-color: var(--orange-color);
+	background-color: var(--light-green-color);
 }
 
 .slider-next {
@@ -106,7 +116,7 @@ main {
 	height: 50px;
 	padding: 0;
 	border-radius: 10%;
-	background-color: var(--medium-grey-color);
+	background-color: var(--green-color);
 	opacity: .9;
 	transition: all .4s ease;
 }
@@ -120,39 +130,90 @@ main {
 .slider-next:hover {
 	opacity: 1;
 	transform: scale(1.1);
-	background-color: var(--orange-color);
+	background-color: var(--light-green-color);
 }
 /* ============================Плитка================================== */
 
-.galary__container {
-	padding: 20px 0 100px 0;
+.gallery__plit {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 5px;
 }
 
-.galary-grid {
-	display: grid;
-	grid-template-columns: repeat(4, 1fr);
-	grid-template-rows: repeat(2, 1fr);
-	gap: var(--m36);
-	align-items: center;
-	justify-items: center;
-	padding-bottom: 24px;
-	z-index: -1;
+.gallery__card {
+  position: relative;
+  height: 300px;
+  cursor: pointer;
+  overflow: hidden;
 }
 
-.galary__pic {
-	display: block;
-	width: 250px;
+.gallery__card__pic {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 0.2s;
 }
 
-.galary__item {
-	position: relative;
-	transition: 0.3s ease;
+.gallery__card:hover .gallery__card__pic {
+  transform: scale(1.1);
 }
 
-.galary-grid__item:hover {
-	color: var(--blue-color);
-	transform: scale(1.05);
-	cursor: default;
+.slider2 {
+  opacity: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  pointer-events: none;
+}
+
+.active {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.slider__container {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  width: 80vw;
+  height: 80vh;
+}
+
+.slider__btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+  padding: 20px;
+  font-size: 30px;
+  z-index: 10;
+}
+
+.slider__btn_left {
+  left: 25px;
+}
+
+.slider__btn_right {
+  right: 25px;
+}
+
+.slider__close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  font-size: 30px;
+  padding: 20px;
+  color: #fff;
+  background: none;
+  border: none;
 }
 
 /* Adaptive */
