--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -6,6 +6,8 @@
 	--light-grey-color: #f1f6fa;
 	--medium-grey-color: #353535;
 	--white-color: #ffffff;
+	--deep-blue: rgba(38, 102, 206);
+	--light-blue: rgba(67, 132, 236);
 
 	--font-basic: 'Roboto', sans-serif;
 	--font-heading: 'Roboto Slab', serif;
