--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -306,42 +306,36 @@ body {
     position: relative;
 }
 
-.buble1 {
-    background-color: var(--white-color);
+.faq__bubles {
+    background-color: var(--light-blue);
     border-radius: 50% 50%;
+    position: absolute;
+}
+
+.buble1 {
     height: 80px;
     width: 80px;
-    position: absolute;
     left: -60px;
     top: 240px;
 }
 
 .buble2 {
-    background-color: var(--white-color);
-    border-radius: 50% 50%;
     height: 60px;
     width: 60px;
-    position: absolute;
     left: -25px;
     top: 140px;
 }
 
 .buble3 {
-    background-color: var(--white-color);
-    border-radius: 50% 50%;
     height: 40px;
     width: 40px;
-    position: absolute;
     left: -50px;
     top: 60px;
 }
 
 .buble4 {
-    background-color: var(--white-color);
-    border-radius: 50% 50%;
     height: 20px;
     width: 20px;
-    position: absolute;
     left: -20px;
     top: 0px;
 }
